Modifying deployment file location